.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v3/missingReturnYieldStar_yieldable.errors.txt
=== Metadata ===
Effect version: 3.19.19

/.src/missingReturnYieldStar_yieldable.ts(8,7): error TS377006: This Effect never succeeds; using `return yield*` preserves a definitive generator exit point for type narrowing and tooling support. effect(missingReturnYieldStar)


==== /.src/missingReturnYieldStar_yieldable.ts (1 errors) ====
    // @effect-v3
    import * as Effect from "effect/Effect"
    
    export const shouldComplain = (n: number) =>
      Effect.gen(function*() {
        if (n === 0) {
          // In v3, yieldable parsing falls back to Effect typing.
          yield* Effect.fail("no zero!")
          ~~~~~
!!! error TS377006: This Effect never succeeds; using `return yield*` preserves a definitive generator exit point for type narrowing and tooling support. effect(missingReturnYieldStar)
        }
        return n / 1
      })
    
